# kaniop

./: CHANGELOG.md  Cargo.toml
.forkline/: setup.rh
.github/workflows/: helm.yml
charts/kaniop/: Chart.yaml
cmd/examples/src/: oauth2.rs
examples/: oauth2.yaml
libs/k8s-util/: Cargo.toml
libs/k8s-util/src/: resources.rs
libs/oauth2/: Cargo.toml
libs/oauth2/src/: crd.rs  image.rs
libs/oauth2/src/reconcile/: mod.rs  secret.rs  status.rs
libs/operator/src/: crd.rs  lib.rs  object_meta_template.rs
libs/operator/src/kanidm/reconcile/: mod.rs  statefulset.rs
tests/e2e/test/: mod.rs  oauth2_secret_template.rs  service_account.rs
tests/e2e/test/kanidm/: replication.rs
