[workspace]
members = [
    "cmd/crdgen",
    "cmd/examples",
    "cmd/operator",
    "cmd/webhook",
    "libs/group",
    "libs/k8s-util",
    "libs/oauth2",
    "libs/operator",
    "libs/person",
    "libs/service-account",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.5.7"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.85"
edition = "2024"
license-file = "LICENSE.md"
repository = "https://github.com/pando85/kanidm-operator"
homepage = "https://github.com/pando85/kanidm-operator"
readme = "README.md"

[workspace.dependencies]
kaniop-group = { path = "libs/group", version = "0.5.7" }
kaniop-k8s-util = { path = "libs/k8s-util", version = "0.5.7" }
kaniop-oauth2 = { path = "libs/oauth2", version = "0.5.7" }
kaniop-operator = { path = "libs/operator", version = "0.5.7" }
kaniop-person = { path = "libs/person", version = "0.5.7" }
kaniop-service-account = { path = "libs/service-account", version = "0.5.7" }
jiff = "0.2.18"
clap = { version = "4.5", features = ["std", "derive"] }
futures = "0.3"
hex = "0.4"
http = "1.1"
json-patch = "4.0"
k8s-openapi = { version = "0.27", default-features = false, features = ["v1_32"] }
kanidm_client = "1.9.0"
kanidm_lib_crypto = "1.9.0"
kanidm_proto = "1.9.0"
kube = { version = "3.0.0", default-features = true, features = ["client", "derive", "unstable-runtime"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["tokio"] }
schemars = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
url = "2"
uuid = "1"
parking_lot = "0.12"
# Kanidm dependency
rustls = "0"
# dependency for kanidm packages required for cross compilation
# https://github.com/cross-rs/cross/wiki/Recipes#openssl
openssl = { version = '0', features = ["vendored"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release-e2e]
inherits = "release"
lto = "thin"
codegen-units = 32

[profile.e2e]
inherits = "dev"
lto = "thin"
codegen-units = 32
