[package]
name = "kaniop-oauth2"
description = "Kanidm OAuth2 client management for the Kubernetes operator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kaniop_oauth2"
path = "src/lib.rs"

[features]
default = ["schemars"]
schemars = ["dep:schemars", "k8s-openapi/schemars", "kaniop-operator/schemars"]
integration-test = []

[dependencies]
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
kanidm_client = { workspace = true }
kanidm_proto = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
time = "0.3"
serde = { workspace = true }
schemars = { workspace = true, optional = true }
url = { workspace = true }
reqwest = { version = "0.13", default-features = true, features = ["http2"] }
sha2 = "0.11"
